<resources>
    <string name="app_name">Ask Aalim</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="facebook_app_id">116530435640397</string>
    <string name="fb_login_protocol_scheme">fb116530435640397</string>
    <string name="action_settings">Settings</string>
    <string name="web_client_id">568222930825-pgnkmh9g26i0be0a7v5ba1305c2l9tnm.apps.googleusercontent.com</string>
    <string name="title_activity_splash">ASK AALIM</string>
    <string name="enter">Enter</string>
    <string name="login_statment">Login Here</string>
    <string name="question">What is your question?</string>
    <string name="ask">Ask a question</string>
    <string name="G_login">Login As GUEST</string>
    <string name="ayatno60">هَلْ جَزَاء الْإِحْسَانِ إِلَّا الْإِحْسَانُ</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_register">New user, tap here to register !</string>
    <string name="register">Register</string>
    <string name="upload_img">Upload Image</string>
    <string name="hadees">The Prophet ﷺ said: “O ‘Aaishah (Razi Allah Taala Anhu)! Have you ever seen me speaking a bad and dirty language? (Remember that) the worst people in Allah’s sight on the Day of Resurrection will be those whom the people desert or leave in order to save themselves from their dirty language or from their transgression</string>
    <string name="chng_image">Click image to change image</string>

    <string-array name="qualification_spinner_name">
        <item>Intermediate</item>
        <item>Bachelor</item>
        <item>Masters</item>
        <item>Others</item>
    </string-array>

    <string-array name="fiqah_spinner_name">
        <item>Select...</item>
        <item>Hanafi</item>
        <item>Maliki</item>
        <item>Shafii</item>
        <item>Hanbali</item>
        <item>Other</item>
    </string-array>

    <string name="title_activity_in_app_purchaser">inApp_purchaser</string>
    <string name="register_now">Register Now</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="urdu_name">نام</string>
    <string name="urdu_email">ای میل</string>
    <string name="urdu_password">پاس ورڈ</string>
    <string name="urdu_conf_password">پاس ورڈ کی توثیق کریں</string>
    <string name="urdu_phone">فون نمبر</string>
    <string name="urdu_choose_dp">اپنی پروفائل کیلئے تصویر منتخب کریں</string>
    <string name="urdu_male">مرد</string>
    <string name="urdu_female">عورت</string>
    <string name="urdu_gender"> : جنس</string>
    <string name="urdu_city">شہر</string>
    <string name="urdu_state">علاقہ</string>
    <string name="urdu_cmplt_address">مکمل پتہ</string>
    <string name="urdu_education">تعلیم</string>
    <string name="urdu_certificate">اپنے سرٹیفکیٹ کی تصویر منتخب کریں</string>
    <string name="urdu_idCard">اپنی شناختی کارڈ کی تصویر منسلک کریں</string>
    <string name="urdu_known_lang">معلوم زبانیں</string>
    <string name="urdu_fiqah">فقیہ</string>
    <string name="urdu_spec_cat">اپنے ماہر زمرہ جات کا انتخاب کریں</string>
    <string name="urdu_select_country">اپنے ملک کا انتخاب کریں</string>
    <string name="urdu_eng">انگریزی</string>
    <string name="urdu_urdu">اردو</string>
    <string name="emailvalidity_urdu">اگر آپ کے پاس درست ای میل نہیں ہے تو اسے خالی چھوڑ دیں</string>
    <string name="urdu_arabic">عربی</string>
    <string name="urdu_khuwab">خواب</string>
    <string name="urdu_istekhara">استخارہ</string>
    <string name="urdu_wazaif">وظاءف</string>
    <string name="urdu_finish">سیٹ اپ مکمل کریں</string>
    <string name="passwordhinturdu">پاس ورڈ کی لمبائی 6 حروف سے زیادہ ہونا چاہئے -</string>
    <string name="U_C_email">ای میل کی توثیق کریں</string>
    <string name="Urdu_username">صارف کا نام</string>

    <string name="username">Username</string>
    <string name="eng_name">Name</string>
    <string name="eng_email">Email</string>
    <string name="eng_pass">Password</string>
    <string name="eng_con_pass">Confirm Password</string>
    <string name="eng_phone">Phone Number</string>
    <string name="eng_chose_dp">Choose Your Profile Picture</string>
    <string name="eng_gender">Gender : </string>
    <string name="eng_male">Male</string>
    <string name="eng_female">Female</string>
    <string name="eng_city">City</string>
    <string name="eng_state">State</string>
    <string name="eng_address">Complete Address</string>
    <string name="eng_education">Your Qualification</string>
    <string name="eng_certificate">Select Your Certificate Picture</string>
    <string name="eng_idCopy">Select attach Picture of Your ID-Card</string>
    <string name="eng_known_lan">Known Languages</string>
    <string name="eng_fiqah">Your Fiqah </string>
    <string name="eng_spec_cat">Choose your Specialist Categories</string>
    <string name="eng_slct_country">Select your Country</string>
    <string name="eng_Eng">English</string>
    <string name="eng_urdu">Urdu</string>
    <string name="eng_arabic">Arabic</string>
    <string name="eng_khuwab">Khuwab</string>
    <string name="eng_istekhara">Istekhara</string>
    <string name="eng_wazaif">Wazaif</string>
    <string name="eng_finish">Sign up</string>
    <string name="answer">Answer</string>
    <string name="comment">Comment</string>
    <string name="upvote">Upvote</string>
    <string name="Downvote">Downvote</string>
    <string name="validEmailStatement">If you dont have valid email then leave it blank</string>
    <string name="passwordLengthHint">- Password length should be greater than 6 characters</string>
    <string name="home">Home</string>
    <string name="Bookmark">Bookmark</string>
    <string name="unanswer">Unanswer</string>
    <string name="followers">Followers</string>
    <string name="title_activity_search_with_tabbed">SearchWithTabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="comments">COMMENTS</string>
    <string name="readmore">Readmore</string>
    <string name="time">10h30</string>
    <string name="reply">Reply</string>
    <string name="mostlikedanswer">Most Liked Answer</string>
    <string name="viewallanswers">View All Answers</string>
    <string name="type_comment">Type comment...</string>
    <string name="viewallcomments">View All Comments</string>
    <string name="replies">Replies</string>
    <string name="message">Message</string>
    <string name="new_message">Type New message</string>
    <string name="no_new_messages">No chat found</string>
    <string name="c_email">Confirm Email</string>
    <string name="update_profile">Update Profile</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="reset_pwd">Reset Password</string>
    <string name="purchase">Purchase</string>
    <string name="purchase_statement">You have to purchase this feature. Purchase it now ?</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="first_instruction">First Instruction</string>
    <string name="comment_instruction">Comment Instructions</string>
    <string name="record_audio">Record Audio</string>
    <string name="edit_ans">Edit Answer</string>
    <string name="premium">Premium</string>
    <string name="askWazifa">Ask for Wazifa</string>
    <string name="askkhuwab">Ask for Khuwab ki tabeer</string>
    <string name="askistekhara">Ask for Istekhara</string>
    <string name="buy_prem">Buy Premium</string>
    <string name="askWazifa_desc">Keep Swiping forever, no limits no timers</string>
    <string name="pkg">Buy complete package for only Rs. 250 </string>
    <string name="seen">Seen</string>
    <string name="writeans">Write an Asnwer</string>
    <string name="posttext">Post text</string>
    <string name="notification">Notification</string>
    <string name="zero">0</string>
    <string name="user">User</string>

    <string name="FCM_PREF">com.zillion.android.askaalim.fcm_pref</string>
    <string name="FCM_TOEKN">com.zillion.android.askaalim.fcm_token</string>

</resources>
