<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.zillion.nabeel.postandcommenttutorial.ui.activities.RegisterActivities.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:src="@drawable/ask_alim_150x150_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/ayatno60"
                android:textSize="24dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/login_statment"
                    android:visibility="gone" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radiobtn_alim"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="selectUserType"
                        android:paddingRight="5dp"
                        android:text="As Alim"
                        android:textSize="20dp" />

                    <RadioButton
                        android:id="@+id/radiobtn_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="selectUserType"
                        android:paddingLeft="5dp"
                        android:text="As User"
                        android:textSize="20dp" />

                    <!--android:checked="true"-->

                </RadioGroup>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorTextAppearance="@string/app_name"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/input_background"
                        android:ems="10"
                        android:hint="@string/eng_email"
                        android:drawableLeft="@drawable/email_icon"
                        android:drawablePadding="5dp"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="5dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp"
                        android:background="@android:color/darker_gray" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/login_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/input_background"
                        android:ems="10"
                        android:hint="@string/eng_pass"
                        android:inputType="textPassword"
                        android:maxLines="2"
                        android:drawableLeft="@drawable/password_lock"
                        android:drawablePadding="5dp"
                        android:padding="4dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp"
                        android:background="@android:color/darker_gray" />


                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/login_tv"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:background="#015A35"
                    android:fontFamily="serif"
                    android:padding="5dp"
                    android:text="@string/login"
                    android:textColor="#ffffff"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/signup_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/register_now"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="2dp"
                        android:paddingRight="2dp"
                        android:text="|"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/forgotPass_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/forgot_pass"
                        android:textSize="17dp" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_marginBottom="10dp"
                >


                <!--<com.facebook.login.widget.LoginButton

                    android:id="@+id/facebookLoginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    />
-->
                <TextView
                    android:id="@+id/guest_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="3dp"
                    android:text="@string/G_login" />

                </LinearLayout>

            <!--<com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
            </com.google.android.gms.ads.AdView>-->

            </LinearLayout>

        </ScrollView>


</LinearLayout>